# razer-battery-report-viper-v3-pro

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: devices.rs  main.rs  manager.rs  notify.rs  tray.rs
