[package]
name = "razer-battery-report"
version = "0.3.0"
authors = ["xzeldon <contact@zeldon.ru>"]
edition = "2021"
description = "Razer Battery Level Tray Indicator"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

# Faster builds, slower executables
[profile.dev]
opt-level = 0
lto = false
incremental = true
codegen-units = 16

[dependencies]
# Communicate with HID devices
hidapi = "2.6.4"

# Logging
log = "0.4.29"
pretty_env_logger = "0.5.0"

# Event Loop and Tray Icon
tao = "0.34.5"
tray-icon = "0.21.2"

# Image manipulation
image = "0.25.9"

# Windows API
winapi = { version = "0.3.9", features = ["winuser", "wincon", "consoleapi"] }

# Efficient synchronization primitives (e.g. Mutex, RwLock and etc.)
parking_lot = "0.12"

# Desktop notifications
notify-rust = "4.11.7"
